modified template url

--- a/public/modules/calc/views/calculator.client.view.html
+++ b/public/modules/calc/views/calculator.client.view.html
@@ -1,6 +1,7 @@
 <!--<section data-ng-controller="CalculatorController">-->
 <section>
 	This is the Calculator
+ <!--<div ng-app="calc">-->
     <div ng-controller="calcInterfaceCtrl" ng-controller="calcHistoryCtrl">
         <!--<div class="btn-primary">this is laabel</div>-->
         <input align="right" ng-model="calcExpression">
@@ -10,4 +11,5 @@
 
         <result-interface arr-items="calcResultArr" add-item="addResult()"></result-interface>
     </div>
+ <!--</div>-->
 </section>
