--- a/public/modules/egghead/views/assignment01-view.client.view.html
+++ b/public/modules/egghead/views/assignment01-view.client.view.html
@@ -4,6 +4,7 @@
 <!--index.start.html-->
 <!doctype html>
 <html>
+<!--<html ng-app>-->
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
@@ -27,7 +28,9 @@
             </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-            <div>
+            <div ng-init="hello='world'">
+                <h1>{{hello}}</h1>
+                <input type="text" ng-model="hello">
                 <button type="button" class="close">&times;</button>
                 <button type="button" class="btn btn-link">
                     <span class="glyphicon glyphicon-pencil"></span>
@@ -62,6 +65,7 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3,11/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.22/angular.min.js"></script>
 
 </body>
 
