--- a/public/modules/egghead/views/assignment01-view.client.view.html
+++ b/public/modules/egghead/views/assignment01-view.client.view.html
@@ -3,6 +3,7 @@
 <!--</section>-->
 <!--index.start.html-->
 <!doctype html>
+
 <html>
 <!--<html ng-app>-->
 <head>
@@ -16,40 +17,28 @@
     <link rel="stylesheet" href="assets/css/eggly.css">
     <link rel="stylesheet" href="assets/css/animation.css">
 </head>
-<body>
-<div class="contain-fluid">
+<!--<body>-->
+<!--<body ng-controller="mainCtrl">-->
+<section ng-controller="mainCtrl">
+    <div class="contain-fluid">
     <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
             <a href="#"><img class="logo" src="assets/img/eggly-logo.png"> </a>
             <ul class="nav nav-sidebar">
-                <li><a href="#">Category</a></li>
-                <li><a href="#">Category</a></li>
-                <li><a href="#">Category</a></li>
+                <li ng-repeat="category in categories">
+                    <a href="#">{{category.name}}</a>
+                </li>
             </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-            <div ng-init="hello='world'">
-                <h1>{{hello}}</h1>
-                <input type="text" ng-model="hello">
+            <div ng-repeat="bookmark in bookmarks">
+                <!--<h1>{{hello}}</h1>-->
+                <!--<input type="text" ng-model="hello">-->
                 <button type="button" class="close">&times;</button>
                 <button type="button" class="btn btn-link">
                     <span class="glyphicon glyphicon-pencil"></span>
                 </button>
-                <a href="#" target="_blank">Bookmark</a>
-            </div>
-            <div>
-                <button type="button" class="close">&times;</button>
-                <button type="button" class="btn btn-link">
-                    <span class="glyphicon glyphicon-pencil"></span>
-                </button>
-                <a href="#" target="_blank">Bookmark</a>
-            </div>
-            <div>
-                <button type="button" class="close">&times;</button>
-                <button type="button" class="btn btn-link">
-                    <span class="glyphicon glyphicon-pencil"></span>
-                </button>
-                <a href="#" target="_blank">Bookmark</a>
+                <a href="{{bookmark.url}}" target="_blank">{{bookmark.title}}</a>
             </div>
             <hr>
         </div>
@@ -63,10 +52,11 @@
 
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="//netdna.bootstrapcdn.com/bootstrap/3,11/js/bootstrap.min.js"></script>
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.22/angular.min.js"></script>
 
-</body>
+<!--</body>-->
+</section>
 
 </html>
