--- a/public/modules/egghead/views/assignment01-view.client.view.html
+++ b/public/modules/egghead/views/assignment01-view.client.view.html
@@ -11,11 +11,11 @@
     <meta name="viewport" content="width=device-width">
     <title>Eggly</title>
 
-    <link rel="stylesheet" href="assets/css/normalize.css">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.11/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/modules/egghead/assets/css/normalize.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
-    <link rel="stylesheet" href="assets/css/eggly.css">
-    <link rel="stylesheet" href="assets/css/animation.css">
+    <link rel="stylesheet" href="/modules/egghead/assets/css/eggly.css">
+    <link rel="stylesheet" href="/modules/egghead/assets/css/animation.css">
 </head>
 <!--<body>-->
 <!--<body ng-controller="mainCtrl">-->
@@ -23,15 +23,15 @@
     <div class="contain-fluid">
     <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
-            <a href="#"><img class="logo" src="assets/img/eggly-logo.png"> </a>
+            <a href="#" ng-click="setCurrentCategory(null)" ><img class="logo" src="/modules/egghead/assets/img/eggly-logo.png"> </a>
             <ul class="nav nav-sidebar">
-                <li ng-repeat="category in categories">
-                    <a href="#">{{category.name}}</a>
+                <li ng-repeat="category in categories" ng-class="{'active':isCurrentCategory(category)}">
+                    <a href="#" ng-click="setCurrentCategory(category)">{{category.name}}</a>
                 </li>
             </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-            <div ng-repeat="bookmark in bookmarks">
+            <div ng-repeat="bookmark in bookmarks | filter:{category:currentCategory.name}">
                 <!--<h1>{{hello}}</h1>-->
                 <!--<input type="text" ng-model="hello">-->
                 <button type="button" class="close">&times;</button>
@@ -52,7 +52,7 @@
 
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.22/angular.min.js"></script>
 
