--- a/public/modules/egghead/views/assignment01-view.client.view.html
+++ b/public/modules/egghead/views/assignment01-view.client.view.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
     <link rel="stylesheet" href="/modules/egghead/assets/css/eggly.css">
-    <link rel="stylesheet" href="/modules/egghead/assets/css/animation.css">
+    <link rel="stylesheet" href="/modules/egghead/assets/css/animations.css">
 </head>
 <!--<body>-->
 <!--<body ng-controller="mainCtrl">-->
@@ -35,15 +35,33 @@
                 <!--<h1>{{hello}}</h1>-->
                 <!--<input type="text" ng-model="hello">-->
                 <button type="button" class="close">&times;</button>
-                <button type="button" class="btn btn-link">
+                <button type="button" ng-click="startEditing()" class="btn btn-link">
                     <span class="glyphicon glyphicon-pencil"></span>
                 </button>
                 <a href="{{bookmark.url}}" target="_blank">{{bookmark.title}}</a>
             </div>
             <hr>
+            <!-- CREATING -->
+            <div ng-if="shouldShowCreating()">
+                <button type="button" class="btn btn-link" ng-click="startCreating()">
+                    <span class="glyphicon glyphicon-plus"></span>
+                    Create Bookmark
+                </button>
+                <div ng-if="isCreating">
+                    Create a bookmark!
+                    <button type="button" class="btn btn-default btn-lg pull-right"
+                            ng-click="cancelCreating()">Cancel </button>
+                </div>
+            </div>
+
+            <!--EDITING-->
+            <hr>
+            <div ng-if="shouldShowEditing()">
+                Edit a bookmark!
+                <button type="button" class="btn btn-default btn-lg pull-right"
+                        ng-click="cancelEditing()">Cancel </button>
+            </div>
         </div>
-
-
     </div>
 
 
