--- a/public/modules/egghead/views/assignment01-view.client.view.html
+++ b/public/modules/egghead/views/assignment01-view.client.view.html
@@ -26,6 +26,7 @@
             <a href="#" ng-click="setCurrentCategory(null)" ><img class="logo" src="/modules/egghead/assets/img/eggly-logo.png"> </a>
             <ul class="nav nav-sidebar">
                 <li ng-repeat="category in categories" ng-class="{'active':isCurrentCategory(category)}">
+                <!--<li ng-repeat="category in categories" >-->
                     <a href="#" ng-click="setCurrentCategory(category)">{{category.name}}</a>
                 </li>
             </ul>
